# server/src/controllers/transactions.controller.js
@@ -1,5 +1,6 @@
 import {PrismaClient} from "@prisma/client";
-import {compareTokens} from "../services/tokens.service.js";
+import {compareTokens, validateToken} from "../services/tokens.service.js";
+import {verifyOTP} from "../services/users.service.js";
 
 const prisma = new PrismaClient()
 
@@ -33,33 +34,54 @@ async function get(req, res, next) {
 
 async function post(req, res, next) {
     try {
-        const { receiverAccount, amount, type } = req.body
+        const { receiverAccount, amount, type, confirmation } = req.body
 
         const sender = await prisma.user.findFirst({
             where: {
                 id: req.id.id,
+            },
+            include: {
+                tokens: true
             }
         })
 
-        if (sender.tokens != null && sender.tokens.length > 0) {
-            const token = req.body.token
 
-            if (!token)
-                return res.status(403).json({message: "User hasn't provided any type of tx confirmation"})
+        const token = req.body.token
 
-            let found = false
+        if (!token)
+            return res.status(403).json({message: "User hasn't provided any type of tx confirmation"})
+
+        if (confirmation === 0 && sender.tokens != null && sender.tokens.length > 0) {
+            let foundToken = null
             sender.tokens.forEach(async t => {
-                if (await compareTokens(t, req.body.token)) {
-                    found = true
+                if (await compareTokens(req.body.token, t)) {
+                    foundToken = t
                 }
             })
 
-            if (!found)
+            if (!foundToken)
                 return res.status(403).json({message: "Wrong token provided"})
+
+            const validationResult = validateToken(foundToken, {amount: amount, senderId: req.id.id})
+            if (!validationResult.accepted)
+                return res.status(403).json({message: validationResult.message})
+        } else if (confirmation === 0 && sender.tokens.length === 0) {
+            return res.status(403).json({message: "User hasn't provided any type of tx confirmation"})
+
+        } else if (confirmation === 1) {
+            if (!verifyOTP(sender.otpKey, req.body.token)) {
+                return res.status(403).json({message: "Wrong 2FA code"})
+            }
         }
 
         if (amount > sender.mainBalance)
             return res.status(400).json({ message: "Not enough balance"})
+
+        if (confirmation === 1) {
+            if (!verifyOTP(sender.otpKey, token)) {
+                return res.status(403).json({message: "Wrong 2FA code"})
+            }
+        }
 
         if (+type === 0) {
             const sender = await prisma.user.update({
@@ -85,7 +107,7 @@ async function post(req, res, next) {
                     }
                 })
             } catch (e) {
-                return res.status(404).json({message: "User not found"})
+                return res.status(404).json({message: "Receiver not found"})
             }
         } else if (+type === 1) {
             const currDate = new Date()
@@ -96,7 +118,6 @@ async function post(req, res, next) {
                 }
             })
 
-            console.log(loan)
             if (!loan)
                 return res.status(404).json({ message: "Loan not found"})
             else if (loan.dateExpire < currDate)
